# software-learning-period

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile.nginx  index.html  vortex_developer_setup_guide.md
Solution-Guide/: docker-compose.yml  dockerfile.nginx
asv/listener/: CMakeLists.txt  package.xml
asv/talker_cpp/: CMakeLists.txt  package.xml
asv/talker_py/: package.xml
autonomous/listener/: CMakeLists.txt  package.xml
autonomous/talker_cpp/: CMakeLists.txt  package.xml
autonomous/talker_py/: CMakeLists.txt  package.xml
cv_od/listener/: CMakeLists.txt  package.xml
cv_od/talker_cpp/: CMakeLists.txt  package.xml
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  example_program.py  run.sh
embedded/listener/: CMakeLists.txt  package.xml
embedded/talker_cpp/: CMakeLists.txt  package.xml
embedded/talker_cpp/src/: talker.cpp
embedded/talker_py/: CMakeLists.txt  package.xml
honest_package/: CMakeLists.txt  package.xml
honest_package/src/: honest_publisher.cpp
honest_subscriber_pkg/: CMakeLists.txt  package.xml
honest_subscriber_pkg/launch/: honest_launcher.launch.py
honest_subscriber_pkg/src/: honest_subscriber.cpp
launch/: system_launchfile.launch
msgs_tutorial/: README.md
my_package/: CMakeLists.txt  package.xml
my_package/config/: my_package.yaml
my_package/include/my_publisher/: my_publisher.hpp
my_package/launch/: launch2.launch.py  launch_new_node.launch.py  my_launch.launch.py  my_launch_file.launch.py
my_package/src/: my_publisher.cpp  new_node.cpp
my_package2/: CMakeLists.txt  package.xml
my_package2/include/my_subscriber/: my_subscriber.hpp
my_package2/src/: my_subscriber.cpp
my_package_listener/: CMakeLists.txt  package.xml
my_package_listener/src/: my_listener.cpp
my_publisher/: CMakeLists.txt  package.xml
my_publisher/src/: my_publisher.cpp
my_subscriber/: CMakeLists.txt  package.xml
my_subscriber/src/: my_subscriber.cpp
services-tutorial/: README.md
slam/listener/: CMakeLists.txt  package.xml
slam/talker_cpp/: CMakeLists.txt  package.xml
slam/talker_py/: CMakeLists.txt  package.xml
tutorial_packages/frames/: CMakeLists.txt  README.md  package.xml
tutorial_packages/frames/description/: person.urdf.xacro
tutorial_packages/frames/include/frames/: dynamic_transform_publisher_ros.hpp
tutorial_packages/frames/launch/: dynamic.launch  dynamic_transform_publisher.launch.py  frames.launch  person.launch.py  static_frames.launch.py
tutorial_packages/frames/scripts/: dynamic_transform_publisher.py
tutorial_packages/frames/src/: dynamic_transform_publisher_ros.cpp
tutorial_packages/listener/: CMakeLists.txt  README.md  package.xml
tutorial_packages/listener/include/listener/: listener_ros.hpp
tutorial_packages/listener/launch/: listener.launch
tutorial_packages/listener/scripts/: listener.py
tutorial_packages/listener/src/: listener_ros.cpp
tutorial_packages/object_detection_example/: CMakeLists.txt  README.md  package.xml
tutorial_packages/object_detection_example/config/: object_detection_example.yaml
tutorial_packages/object_detection_example/include/object_detection_example/: image_republisher_node.hpp  my_image_subscriber.hpp  object_detection_example_ros.hpp  types.hpp  utils.hpp
tutorial_packages/object_detection_example/launch/: object_detection_example.launch.py
tutorial_packages/object_detection_example/src/: image_republisher_node.cpp  my_image_subscriber.cpp  object_detection_example_ros.cpp  republish_color_image.cpp  utils.cpp
tutorial_packages/simple_publisher/: CMakeLists.txt  README.md  package.xml
tutorial_packages/simple_publisher/config/: simple_publisher_config.yaml
tutorial_packages/simple_publisher/include/simple_publisher/: simple_publisher_ros.hpp
tutorial_packages/simple_publisher/launch/: simple_publisher.launch.py
tutorial_packages/simple_publisher/src/: simple_publisher_ros.cpp
tutorial_packages/talker/: CMakeLists.txt  README.md  package.xml
tutorial_packages/talker/include/talker/: talker_ros.hpp
tutorial_packages/talker/src/: talker_ros.cpp
tutorial_packages/talker_cpp/: CMakeLists.txt  README.md  package.xml
tutorial_packages/talker_cpp/include/talker_cpp/: talker.hpp
tutorial_packages/talker_cpp/src/: talker.cpp  talker_node.cpp
tutorial_packages/talker_py/: CMakeLists.txt  README.md  package.xml
tutorial_packages/talker_py/scripts/: talker.py
tutorial_packages/tdd_example/: README.md
tutorial_packages/tdd_example/scripts/: matrix.py
tutorial_packages/tdd_example/scripts/test/: test_matrix.py
tutorial_setup/: CMakeLists.txt  package.xml
tutorial_setup/launch/: system_launchfile.launch
your_code/: README.md
