<?xml version="1.0"?>
<package format="3">
  <name>my_package2</name>
  <version>0.0.1</version>
  <description>ROS 2 subscriber example</description>

  <maintainer email="jorgen.fjermedal@hotmail.com">Jorgen Fjermedal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
