<?xml version="1.0"?>
<package format="2">
  <name>cv_talker_cpp</name>
  <version>0.0.0</version>
  <description>The talker_cpp package</description>

  <maintainer email="detoxte@gmail.com">strom</maintainer>

  <license>The Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>

