<?xml version="1.0"?>
<package format="2">
  <name>embedded_listener</name>
  <version>0.0.0</version>
  <description>The listener package</description>

  <maintainer email="detoxte@gmail.com">strom</maintainer>

  <license>The Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
