<?xml version="1.0"?>
<package format="2">
  <name>frames</name>
  <version>0.0.0</version>
  <description>The frames package</description>


  <maintainer email="detoxte@gmail.com">strom</maintainer>

  <license>The Unlicense</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
